--- a/style.css
+++ b/style.css
@@ -133,3 +133,12 @@ ul li span ::hover{
   align-items: flex-end;
   justify-content: space-between;
 }
+main{
+  
+width:100vw;
+  height:100vh;
+  
+  display:flex;
+justify-content:center;
+align-items:center;
+}
