--- a/dark.css
+++ b/dark.css
@@ -136,3 +136,13 @@ ul li span ::hover{
   align-items: flex-end;
   justify-content: space-between;
 }
+main{
+  
+width:100vw;
+  height:100vh;
+  
+  display:flex;
+justify-content:center;
+align-items:center;
+}
+
