--- a/dark.css
+++ b/dark.css
@@ -146,3 +146,14 @@ justify-content:center;
 align-items:center;
 }
 
+
+p{
+  cursor: pointer;
+  position: absolute;
+  right: 50px;
+  width: 50px;
+  height: 40px;
+  font-size: 15px;
+  top: -20px;
+  text-align:center;
+} 
