--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ background-color:#7066E0;
 li {
   position: relative; /* Ensure li is the nearest positioned ancestor */
   list-style: none; /* Remove default bullet points */
+padding-right:10px;
 }
 
 li::before {
@@ -145,7 +146,7 @@ align-items:center;
 p{
   cursor: pointer;
   position: absolute;
-  right: 50px;
+  right: 90px;
   width: 50px;
   height: 40px;
   font-size: 15px;
